k8s/apps/immich/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      app: default
  template:
    metadata:
      labels:
        app: default
    spec:
      containers:
        - name: server
          image: ghcr.io/immich-app/immich-server:v3.3.1@sha256:db996e352359771c6a3db121a0ed8761516b22f727fc092a0f46dcfef82c1bc1
          ports:
            - containerPort: 2283
          volumeMounts:
            - name: data
              mountPath: /data
            - name: media-nebula
              mountPath: /mnt/pool/nebula_media
              readOnly: true
          resources:
            limits:
              gpu.intel.com/i915: "1"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
        - name: machine-learning
          image: ghcr.io/immich-app/immich-machine-learning:v3.3.1-openvino@sha256:9f5ea923b763435592280e2f5e051a62f1a33d6d14e87620fc15453c27a12ae0
          ports:
            - containerPort: 3003
          volumeMounts:
            - name: model-cache
              mountPath: /cache
            - name: tmp
              mountPath: /tmp
          resources:
            limits:
              gpu.intel.com/i915: "1"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
      volumes:
        - name: data
          hostPath:
            path: /mnt/local/immich/data
            type: DirectoryOrCreate
        - name: model-cache
          hostPath:
            path: /mnt/local/immich/model-cache
            type: DirectoryOrCreate
        - name: media-nebula
          hostPath:
            path: /mnt/pool/nebula_media
            type: Directory
        - name: tmp
          emptyDir: {}
      restartPolicy: Always
      securityContext:
        seccompProfile:
          type: RuntimeDefault
